--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,3 @@
 <!DOCTYPE html>
 <title>mayonaise</title>
-<mayo-app
-	data-action="get-files:mayo-app#getFiles open-file:mayo-app#openFile"
->
-	<mayo-sidebar
-		role="nav"
-		data-action="open:mayo-app#open"
-		data-target="mayo-app.sidebar"
-	></mayo-sidebar>
-	<mayo-document
-		role="main"
-		data-target="mayo-app.document"
-		data-action="save:mayo-app#saveFile"
-	></mayo-document>
-</mayo-app>
+<mayo-app></mayo-app>
